--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -114,6 +114,23 @@ jobs:
           find dl -size -1024c -exec ls -l {} \;
           find dl -size -1024c -exec rm -f {} \;
 
+      - name: Back Propagation (Doge)
+        run: |
+          git config user.name github-actions
+          git config user.email github-actions@github.com
+          cp openwrt/.config .config
+          git pull
+          git add .
+          git status
+          CHANGED=$(git diff-index --name-only HEAD)
+          if [ "$CHANGED" == "" ];
+          then
+            echo There is no new
+          else
+            git commit -m "Back Propagation!!!"
+            git push
+          fi
+
       - name: Compile the firmware
         id: compile
         run: |
