--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -25,6 +25,7 @@ env:
   CONFIG_FILE: .config
   DIY_P1_SH: diy-part1.sh
   DIY_P2_SH: diy-part2.sh
+  DIY_P3_SH: diy-part3.sh
   UPLOAD_BIN_DIR: false
   UPLOAD_FIRMWARE: true
   UPLOAD_COWTRANSFER: false
@@ -85,7 +86,7 @@ jobs:
             ${{ github.workspace }}/openwrt/.ccache
           key: openwrt-ccache
 
-      - name: Load custom feeds
+      - name: Before Update feeds
         run: |
           cp openwrt/feeds.conf.default openwrt/feeds.conf
           chmod +x $DIY_P1_SH
@@ -95,15 +96,21 @@ jobs:
       - name: Update feeds
         run: cd openwrt && ./scripts/feeds update -a
 
-      - name: Install feeds
-        run: cd openwrt && ./scripts/feeds install -a
-
-      - name: Load custom configuration
+      - name: After Update feeds
         run: |
-          [ -e $CONFIG_FILE ] && mv $CONFIG_FILE openwrt/.config
           chmod +x $DIY_P2_SH
           cd openwrt
           $GITHUB_WORKSPACE/$DIY_P2_SH
+
+      - name: Install feeds
+        run: cd openwrt && ./scripts/feeds install -a
+
+      - name: After Install feeds
+        run: |
+          [ -e $CONFIG_FILE ] && mv $CONFIG_FILE openwrt/.config
+          chmod +x $DIY_P3_SH
+          cd openwrt
+          $GITHUB_WORKSPACE/$DIY_P3_SH
 
       - name: Download package
         id: package
